--- a/stats-projects/MATH9102_DIMR_WebsiteSatisfaction.html
+++ b/stats-projects/MATH9102_DIMR_WebsiteSatisfaction.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Andrea Gehrpelli" />
+<meta name="author" content="Andrea Gherpelli" />
 
 
 <title>Dimension Reduction Analysis - Website Satisfaction Survey</title>
@@ -1705,7 +1705,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore">Dimension Reduction Analysis - Website
 Satisfaction Survey</h1>
 <h3 class="subtitle">PSI CA Part Three - Dimension Reduction</h3>
-<h4 class="author">Andrea Gehrpelli</h4>
+<h4 class="author">Andrea Gherpelli</h4>
 
 </div>
 
